# Sentinel

./: .env.example  .gitignore  .state_test_state.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: branch-created.yml  main-ci.yml  release.yml
src/sentinel/: __init__.py  cli.py  config.py  crew_pipeline.py  crewai_runtime.py  gmail_service.py  models.py  pipeline.py  setup.py  sheets_service.py  state_store.py  storage.py  web_research.py
tests/: test_cli.py  test_state_store.py
