[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "CrewAI-based agent that triages placement emails, researches recruiters, and writes rows to Google Sheets."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "crewai>=1.14.1",
  "duckduckgo-search>=6.2.13",
  "google-api-python-client>=2.140.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
  "groq>=0.11.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]

[project.scripts]
sentinel = "sentinel.cli:main"
placement-agent = "sentinel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
