[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "CrewAI-based agent that triages placement emails, researches recruiters, and writes rows to Google Sheets."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
keywords = ["cli", "gmail", "google-sheets", "crewai", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "crewai>=1.14.1",
  "duckduckgo-search>=6.2.13",
  "google-api-python-client>=2.140.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
  "groq>=0.11.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]

[project.scripts]
sentinel = "sentinel.cli:main"
placement-agent = "sentinel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
